examples/test/testpolicy6718.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6718
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key3: value47
      key46: value29
      key35: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value30
      podSelector:
        matchLabels:
          key21: value9
          key8: value15
          key16: value40
